fix(styles/global): restore regular page overflow

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -1,4 +1,5 @@
 @use 'typography';
+@use 'sizes';
 
 @use '@material/theme';
 @use '@material/switch/mdc-switch';
@@ -58,24 +59,22 @@ html {
   height: 100%;
   box-sizing: border-box;
   touch-action: manipulation;
+  font-feature-settings: 'rlig' 1, 'calt' 0;
 }
 
 body {
   position: relative;
   min-height: 100%;
-  overflow: hidden;
   margin: 0;
 }
 
 html,
 body {
   font-family: var(--font-sans);
+  text-rendering: optimizeLegibility;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
   background-color: var(--background);
   color: var(--on-background);
-}
-
-div#__next {
-  width: 100vw;
-  height: 100vh;
-  overflow: auto;
+  scroll-padding-top: sizes.$header-height;
 }
